deploy/sjz/90ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sjz-ingress
  namespace: sjz
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - www.timelines.top
    secretName: tls-secret
  rules:
  - host: www.timelines.top
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: angularclient
          servicePort: 80
